force-app/main/default/objects/MaintenancePlan/MaintenancePlan.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>