force-app/main/default/objects/MaintenancePlan/fields/FSL_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>FSL_Is_Active__c</fullName>
    <description>Si la case est cochée, elle indique que le plan de maintenance est en cours de réalisation.</description>
    <formula>AND(IF( EndDate &gt;= DateValue(now()), True, False),IF( StartDate &lt;= DateValue(now()), True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si la case est cochée, elle indique que le plan de maintenance est en cours de réalisation.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>