force-app/main/default/objects/MaintenancePlan/fields/FSL_Same_Date_As_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>FSL_Same_Date_As_Service_Contract__c</fullName>
    <description>Si la case est cochée, elle indique que les dates du plan de maintenance correspondent aux dates du contrat d&apos;assistance technique.</description>
    <formula>AND(IF(EndDate = ServiceContract.EndDate,true,false),IF(StartDate = ServiceContract.StartDate,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si la case est cochée, elle indique que les dates du plan de maintenance correspondent aux dates du contrat d&apos;assistance technique.</inlineHelpText>
    <label>Same Date As Service Contract</label>
    <type>Checkbox</type>
</CustomField>