force-app/main/default/objects/MaintenancePlan/fields/PM_NomenclatureMaintenance__c.field-meta.xml
<CustomField>
    <fullName>PM_NomenclatureMaintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nomenclature Maintenance</label>
    <referenceTo>NomenclatureMaintenance__c</referenceTo>
    <relationshipLabel>Plans de maintenance</relationshipLabel>
    <relationshipName>Plans_de_maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>