force-app/main/default/objects/MaintenancePlan/fields/PM_Notes__c.field-meta.xml
<CustomField>
    <fullName>PM_Notes__c</fullName>
    <description>Notes</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>