force-app/main/default/objects/MaintenancePlan/fields/PM_Obsolete__c.field-meta.xml
<CustomField>
    <fullName>PM_Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obsolète</label>
    <type>Checkbox</type>
</CustomField>