force-app/main/default/objects/MaintenancePlan/fields/PM_Tech_NumeroDuPlanDeMaintenance_c__c.field-meta.xml
<CustomField>
    <fullName>PM_Tech_NumeroDuPlanDeMaintenance_c__c</fullName>
    <defaultValue>&quot;MP0000&quot;</defaultValue>
    <externalId>true</externalId>
    <label>PM_Tech_NumeroDuPlanDeMaintenance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>