force-app/main/default/objects/MaintenancePlan/fields/Tech_DateAnniversaire__c.field-meta.xml
<CustomField>
    <fullName>Tech_DateAnniversaire__c</fullName>
    <description>Ne pas supprimer ce champ technique binaire permettant de déclencher le processus de renouvellement automatique du plan de maintenance.</description>
    <formula>IF( (EndDate = Today()), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_DateAnniversaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>