force-app/main/default/objects/MaintenancePlan/validationRules/VR03_MP_contratDSnonModifiable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_MP_contratDSnonModifiable</fullName>
    <active>true</active>
    <description>Le contrat de service n&apos;est pas modifiable.</description>
    <errorConditionFormula>AND(ISCHANGED( ServiceContractId ),NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>Le contrat de service n&apos;est pas modifiable.</errorMessage>
</ValidationRule>