force-app/main/default/objects/MaintenancePlan/listViews/All_MaintenancePlans.listView-meta.xml
<ListView>
    <fullName>All_MaintenancePlans</fullName>
    <columns>Name</columns>
    <columns>Description</columns>
    <columns>MaintenancePlanTitle</columns>
    <columns>Account</columns>
    <columns>ServiceContract</columns>
    <columns>WorkOrderGenerationStatus</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>WorkType</columns>
    <columns>NextSuggestedMaintenanceDate</columns>
    <columns>CreatedDate</columns>
    <columns>DoesAutoGenerateWorkOrders</columns>
    <columns>Location</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StartDate</field>
        <operation>greaterThan</operation>
        <value>8/19/2019</value>
    </filters>
    <filters>
        <field>WorkOrderGenerationStatus</field>
        <operation>equals</operation>
        <value>Unsuccessful</value>
    </filters>
    <label>Tous les plans de maintenance</label>
</ListView>